# blender-tools

./: README.md  pyproject.toml
source/: __init__.py  blender_manifest.toml  helpers.py  scene_props.py
source/operators/: grid.py
